test/sparse/domains/parentNotDomainError.chpl

var DR = [1..3];
var SS: sparse subdomain(DR);  // error: DR is not a domain
